backend/api/tests/integration/jig/snapshots/integration__jig__additional_resource__get.snap
---
source: tests/integration/jig/additional_resource.rs
expression: body

---
{
  "url": "url://url.url.url/url"
}
