backend/api/tests/integration/jig/snapshots/integration__jig__additional_resource__get_live.snap
---
source: tests/integration/jig/additional_resource.rs
expression: body
---
{
  "id": "286b828c-1dd9-11ec-8426-571b03b2d3df",
  "displayName": "link test",
  "resourceTypeId": "a91aca34-519e-11ec-ab46-175eaaf1ff23",
  "link": "url://url.url.url/urlese"
}
