backend/api/tests/integration/jig/snapshots/integration__jig__additional_resource__update.snap
---
source: tests/integration/jig/additional_resource.rs
expression: body

---
{
  "url": "{\"url\":\"url://updated.s.s\"}"
}
